--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ backend/node_modules
 # backend/.env
 backend/logs
 
+backend/package.json
 backend/npm-debug.log*
 backend/yarn-debug.log*
 backend/yarn-error.log*
