--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,12 @@
 # misc
 
 # Frontend
-# frontend/.env
+frontend/.env
 frontend/node_modules
 
 backend/node_modules
 # testing
-# backend/.env
+backend/.env
 backend/logs
 
 backend/package.json
