frontend Chat Page UI changes

--- a/backend/.env
+++ b/backend/.env
@@ -8,7 +8,7 @@ REDIRECT_URI=https://developers.google.com/oauthplayground
 REFRESH_TOKEN=1//04KXkKo-XNPNWCgYIARAAGAQSNwF-L9IrhV5eM63-wWB8HRert50R_FcA8TRv19Zzt91bPu6V44mzZzoTc5IBQfWyZz_wRaGstPU
 
 SENDGRID_API_KEY=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
-FRONT_BASE_URL=https://si.mibanana.com
+FRONT_BASE_URL=http//localhost:3000
 SENDGRID_API_KEY=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
 SENDER=mibanana@mibanana.com
 
