--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "6.11.0",
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
+    "react-simple-image-viewer": "^1.2.2",
     "react-spinners": "^0.13.8",
     "react-table": "7.8.0",
     "redux": "^4.2.1",
