--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-dropzone": "^14.2.3",
     "react-github-btn": "1.4.0",
     "react-phone-input-2": "^2.15.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "6.11.0",
     "react-scripts": "5.0.1",
