--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,10 +33,12 @@
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
     "react-simple-image-viewer": "^1.2.2",
+    "react-slick": "^0.30.1",
     "react-spinners": "^0.13.8",
     "react-table": "7.8.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "^2.1.1",
