--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "socket.io-client": "^4.7.2",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "^2.1.1",
+    "swiper": "^11.0.5",
     "yup": "1.1.1"
   },
   "scripts": {
