--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@ frontend/.env
 frontend/node_modules
 
 backend/node_modules
+
+# creadential files backend
+backend/google-cloud-storage/mibanana-app-1bcac3255187.json
+backend/google-cloud-storage/mibanana-app.json
+
 # testing
 backend/.env
 backend/logs
