--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-github-btn": "1.4.0",
+    "react-image-lightbox": "^5.1.4",
     "react-phone-input-2": "^2.15.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
