--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,5 @@ backend/package-lock.json
 backend/yarn.lock
 backend/commit.sh
 
-socket-server/package-lock.json
+# socket-server/package-lock.json
 socket-server/node_modules
