--- a/socket-server/package.json
+++ b/socket-server/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js",
-        "dev" : "nodemon server.js"
+        "dev": "nodemon server.js"
     },
     "keywords": [],
     "author": "",
@@ -14,7 +14,9 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "mongoose": "^8.2.0",
         "nodemon": "^3.1.0",
-        "socket.io": "^4.7.2"
+        "socket.io": "^4.7.2",
+        "uuid": "^9.0.1"
     }
 }
