--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^11.0.5",
+    "uuid": "^9.0.1",
     "yup": "1.1.1"
   },
   "scripts": {
